--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -94,6 +94,10 @@
   font-size: 2.4rem;
   line-height: 1.27;
 
+  transform: translateY(20px);
+  opacity: 0;
+  transition: all .5s ease;
+
   @media (min-width: $stop-scaling) {
     width: 509px;
     font-size: 24px;
@@ -132,6 +136,11 @@
       width: 1.1rem;
       height: 1.1rem;
     }
+  }
+
+  .screen--intro.active & {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 
