--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -97,6 +97,19 @@
   font-size: 1.8rem;
   line-height: 2rem;
 
+  transform: translateX(20px);
+  opacity: 0;
+
+  .swiper-slide-active & {
+    animation: block-fadeIn-left 0.5s ease 0.3s forwards;
+  }
+
+  @media (min-width: $mobile) {
+    .swiper-slide-next & {
+      animation: block-fadeIn-left 0.5s ease 0.6s forwards;
+    }
+  }
+
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
     max-width: 340px;
@@ -274,5 +287,12 @@
       height: 0.4rem;
       background-color: $c-light;
     }
+  }
+}
+
+@keyframes block-fadeIn-left {
+  to {
+    transform: translateX(0);
+    opacity: 1;
   }
 }
