--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -101,12 +101,12 @@
   opacity: 0;
 
   .swiper-slide-active & {
-    animation: block-fadeIn-left 0.5s ease 0.3s forwards;
+    animation: appear-fadeIn 0.5s ease 0.3s forwards;
   }
 
   @media (min-width: $mobile) {
     .swiper-slide-next & {
-      animation: block-fadeIn-left 0.5s ease 0.6s forwards;
+      animation: appear-fadeIn 0.5s ease 0.6s forwards;
     }
   }
 
@@ -287,12 +287,5 @@
       height: 0.4rem;
       background-color: $c-light;
     }
-  }
-}
-
-@keyframes block-fadeIn-left {
-  to {
-    transform: translateX(0);
-    opacity: 1;
   }
 }
