--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -66,7 +66,7 @@
           animation-duration: 0.3s;
           animation-timing-function: ease;
           animation-fill-mode: forwards;
-          animation-name: appear;
+          animation-name: appear-fadeIn;
         }
 
         &:nth-child(2) > .social-block__link {
@@ -266,12 +266,5 @@
         height: 10px;
       }
     }
-  }
-}
-
-@keyframes appear {
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
