--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -97,16 +97,13 @@
   font-size: 1.8rem;
   line-height: 2rem;
 
-  transform: translateX(20px);
-  opacity: 0;
-
   .swiper-slide-active & {
-    animation: appear-fadeIn 0.5s ease 0.3s forwards;
+    animation: fadeInRight .5s ease .3s both;
   }
 
   @media (min-width: $mobile) {
     .swiper-slide-next & {
-      animation: appear-fadeIn 0.5s ease 0.6s forwards;
+      animation: fadeInRight .5s ease .6s both;
     }
   }
 
