--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -60,13 +60,7 @@
     .social-block--active & {
       & + .social-block__list > li {
         & > .social-block__link {
-          transform: translateY(10px);
-          opacity: 0;
-
-          animation-duration: 0.3s;
-          animation-timing-function: ease;
-          animation-fill-mode: forwards;
-          animation-name: appear-fadeIn;
+          animation: fadeInUp .3s ease both;
         }
 
         &:nth-child(2) > .social-block__link {
