--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -1,6 +1,23 @@
-@keyframes appear-fadeIn {
+@keyframes fadeInRight {
+  from {
+    transform: translateX(2rem);
+    opacity: 0;
+  }
+
   to {
     opacity: 1;
-    transform: translate(0, 0);
+    transform: translateX(0)
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    transform: translateY(2rem);
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0)
   }
 }
