--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -14,7 +14,7 @@
     min-height: calc(var(--vh, 1vh) * 100);
   }
 
-  @media (max-width: $tablet - 1) and (orientation: landscape) {
+  @media (max-width: calc($tablet - 1)) and (orientation: landscape) {
     height: 100vh;
   }
 }
@@ -46,6 +46,16 @@
   color: $c-dark;
   background-color: $c-light;
   z-index: 1;
+
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform .7s $custom-timing-function, opacity .7s $custom-timing-function;
+
+  body.loaded & {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
