style: добавлена анимация перехода экранов истории=>призы

--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -21,3 +21,13 @@
     transform: translateY(0)
   }
 }
+
+@keyframes slideInUpBig {
+  from {
+    transform: translateY(100%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
