--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -313,6 +313,15 @@
 
 .screen--prizes {
   background-color: $c-dark;
+
+  &.animated {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    animation: slideInUpBig .4s ease;
+  }
 }
 
 .screen--game {
