--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -6,7 +6,7 @@
 
   to {
     opacity: 1;
-    transform: translateX(0)
+    transform: translateX(0);
   }
 }
 
@@ -18,7 +18,7 @@
 
   to {
     opacity: 1;
-    transform: translateY(0)
+    transform: translateY(0);
   }
 }
 
