--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -21,3 +21,4 @@ $retina-dppx: 1.5dppx;
 $index: 1.38871;
 
 $custom-timing-function: cubic-bezier(.06,.7,.52,1);
+$bounce-timing-function: cubic-bezier(.35,1.1,.48,1.19);
