--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -120,7 +120,7 @@
 .rules__item {
   position: relative;
   margin: 0 0 6.2rem;
-  padding-top: 0.6rem;
+  padding-top: 1rem;
   padding-left: 6.5rem;
   break-inside: avoid;
 
@@ -144,24 +144,22 @@
     font-size: 1.2rem;
   }
 
-  &::before {
-    content: counter(li);
-    counter-increment: li;
+  &::before,
+  &::after {
     position: absolute;
-    top: 0;
+    top: 0.4rem;
     left: 0;
+    bottom: 0;
     width: 4.5rem;
     height: 4.5rem;
     font-family: $font-alt;
     font-weight: 400;
     font-size: 2.4rem;
-    background-color: $c-purple;
-    border-radius: 50%;
-    line-height: 5rem;
     text-align: center;
+    line-height: 5rem;
 
     @media (max-width: $tablet) and (orientation: portrait) {
-      top: 1rem;
+      top: 1.2rem;
       width: 2.5rem;
       height: 2.5rem;
       line-height: 3rem;
@@ -169,7 +167,7 @@
     }
 
     @media (max-width: $mobile) and (orientation: landscape) {
-      top: 0.6rem;
+      top: 0.8rem;
       width: 2.5rem;
       height: 2.5rem;
       line-height: 3rem;
@@ -177,11 +175,36 @@
     }
   }
 
+  &::before {
+    content: "";
+    background-color: $c-purple;
+    border-radius: 50%;
+    animation: zoomIn 0.6s $bounce-timing-function both;
+  }
+
+  &::after {
+    content: counter(li);
+    counter-increment: li;
+    animation: fadeIn .6s ease both;
+  }
+
   p {
     margin: 0;
+    animation: fadeInRight .6s ease both;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
+    }
+  }
+
+  @for $i from 1 to 5 {
+    &:nth-child(#{$i})::before,
+    &:nth-child(#{$i})::after {
+      animation-delay: calc((#{$i} - 1) * 0.2s);
+    }
+
+    &:nth-child(#{$i}) > p {
+      animation-delay: calc((#{$i}) * 0.2s);
     }
   }
 }
@@ -190,6 +213,15 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+  animation: fadeInColor .5s ease 1s backwards;
+
+  &::before {
+    right: 0;
+    left: initial;
+    transform: translate3D(0, -50%, 0);
+    animation: buttonAppear .5s ease .8s both;
+  }
+
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
