--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -22,3 +22,4 @@
 @import "blocks/slider.scss";
 @import "blocks/social-block.scss";
 @import "blocks/transition.scss";
+@import "blocks/accent-text.scss";
