--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -213,13 +213,17 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
-  animation: fadeInColor .5s ease 1s backwards;
 
   &::before {
     right: 0;
     left: initial;
     transform: translate3D(0, -50%, 0);
-    animation: buttonAppear .5s ease .8s both;
+    animation: buttonAppear .5s ease .8s both, fadeIn .5s ease .8s both;
+  }
+
+  &::after {
+    content: "Погнали!";
+    animation: fadeIn .5s ease 1s backwards;
   }
 
 
