--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -1,3 +1,13 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes fadeInRight {
   from {
     transform: translateX(4rem);
@@ -52,24 +62,12 @@
   }
 }
 
-@keyframes fadeInColor {
-  from {
-    color: transparent;
-  }
-
-  to {
-    color: $c-dark;
-  }
-}
-
 @keyframes buttonAppear {
   from {
-    opacity: 0;
     width: 6rem;
   }
 
   to {
-    opacity: 1;
     width: 100%;
   }
 }
