--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -71,3 +71,128 @@
     width: 100%;
   }
 }
+
+@keyframes flamingo {
+  0% {
+    opacity: 0;
+    transform: translate(-5em, 20em) rotate(-20deg);
+  }
+
+  5% {
+    opacity: 1;
+    transform: translate(-5em, 8em);
+  }
+
+  28% {
+    transform: translate(-5em, 7em) rotate(-6deg);
+  }
+
+  52% {
+    transform: translate(-5em, 7.8em);
+  }
+
+  75% {
+    transform: translate(-5em, 7.3em) rotate(-6deg);
+  }
+
+  100% {
+    transform: translate(-5em, 7.5em);
+  }
+}
+
+@keyframes suitcase {
+  0% {
+    transform: translate(0, 20em) scale(0.2);
+  }
+
+  100% {
+    transform: translate(0, 4.5em);
+  }
+}
+
+@keyframes leaf1 {
+  0% {
+    transform: translate(11em, 0) rotate(-15deg);
+  }
+
+  17% {
+    transform: translate(11em, 0) rotate(10deg);
+  }
+  33% {
+    transform: translate(11em, 0) rotate(-8deg);
+  }
+  50% {
+    transform: translate(11em, 0) rotate(4deg);
+  }
+  70% {
+    transform: translate(11em, 0) rotate(-2deg);
+  }
+
+  88%{
+    transform: translate(11em, 0) rotate(1deg);
+  }
+
+  100% {
+    transform: translate(11em, 0);
+  }
+}
+
+@keyframes leaf2 {
+  0% {
+    transform: translate(-12em, 7.5em) rotate(30deg);
+  }
+
+  20% {
+    transform: translate(-12em, 7.5em) rotate(-20deg);
+  }
+
+  40% {
+    transform: translate(-12em, 7.5em) rotate(6deg);
+  }
+
+  55% {
+    transform: translate(-12em, 7.5em) rotate(-4deg);
+  }
+
+  78% {
+    transform: translate(-12em, 7.5em) rotate(2deg);
+  }
+
+  90% {
+    transform: translate(-12em, 7.5em) rotate(-1deg);
+  }
+
+  100% {
+    transform: translate(-12em, 7.5em);
+  }
+}
+
+@keyframes leaf-green {
+  0% {
+    transform: translate(11em, 7em) rotate(-10deg);
+  }
+
+  20% {
+    transform: translate(11em, 7em) rotate(6deg);
+  }
+
+  40% {
+    transform: translate(11em, 7em) rotate(-4deg);
+  }
+
+  55% {
+    transform: translate(11em, 7em) rotate(2deg);
+  }
+
+  78% {
+    transform: translate(11em, 7em) rotate(-1deg);
+  }
+
+  90% {
+    transform: translate(11em, 7em) rotate(1deg);
+  }
+
+  100% {
+    transform: translate(11em, 7em);
+  }
+}
