--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -3,9 +3,7 @@
     opacity: 0;
   }
 
-  to {
-    opacity: 1;
-  }
+
 }
 
 @keyframes fadeInRight {
@@ -128,7 +126,7 @@
     transform: translate(11em, 0) rotate(-2deg);
   }
 
-  88%{
+  88% {
     transform: translate(11em, 0) rotate(1deg);
   }
 
@@ -201,5 +199,25 @@
   from {
     width: 0;
     padding: 0;
+  }
+}
+
+@keyframes rotateSlideLeftToRight {
+  from {
+    transform: translateX(-4rem) rotate(-180deg);
+  }
+
+  to {
+    transform: initial;
+  }
+}
+
+@keyframes rotateSlideRightToLeft {
+  from {
+    transform: translateX(4rem) rotate(180deg);
+  }
+
+  to {
+    transform: initial;
   }
 }
