--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -18,6 +18,18 @@
   color: $c-dark;
   border-radius: 50%;
 
+  body.blue & {
+    color: $c-blue;
+  }
+
+  body.light-blue & {
+    color: $c-light-blue;
+  }
+
+  body.purple & {
+    color: $c-purple;
+  }
+
   @media (max-width: $tablet) and (orientation: portrait) {
     display: none;
   }
@@ -37,10 +49,10 @@
     z-index: -1;
 
     transform: translate(-50%, -50%) scale(0);
-    transition: transform .5s cubic-bezier(.07,.71,.65,1.59);
+    transition: transform 0.5s cubic-bezier(0.07, 0.71, 0.65, 1.59);
 
     body.loaded & {
-      transform: translate(-50%, -50%)
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -55,6 +67,18 @@
   .social-block--active & {
     color: $c-purple;
 
+    body.blue & {
+      color: $c-light-blue;
+    }
+
+    body.light-blue & {
+      color: $c-blue;
+    }
+
+    body.purple & {
+      color: $c-dark;
+    }
+
     &::before {
       width: 112.5%;
       height: 112.5%;
@@ -67,7 +91,7 @@
     .social-block--active & {
       & + .social-block__list > li {
         & > .social-block__link {
-          animation: fadeInUp .3s ease both;
+          animation: fadeInUp 0.3s ease both;
         }
 
         &:nth-child(2) > .social-block__link {
@@ -85,8 +109,20 @@
     color: $c-purple;
     outline: none;
 
+    body.blue & {
+      color: $c-light-blue;
+    }
+
+    body.light-blue & {
+      color: $c-blue;
+    }
+
+    body.purple & {
+      color: $c-dark;
+    }
+
     &::before {
-      border-color: $c-purple;
+      border-color: currentColor;
     }
 
     & + .social-block__list {
@@ -99,11 +135,38 @@
   &:active:focus {
     color: $c-light;
 
+    body.blue & {
+      color: $c-light;
+    }
+
+    body.light-blue & {
+      color: $c-light;
+    }
+
+    body.purple & {
+      color: $c-light;
+    }
+
     &::before {
       width: 100%;
       height: 100%;
       background-color: $c-purple;
       border-color: $c-purple;
+
+      body.blue & {
+        background-color: $c-light-blue;
+        border-color: $c-light-blue;
+      }
+
+      body.light-blue & {
+        background-color: $c-blue;
+        border-color: $c-blue;
+      }
+
+      body.purple & {
+        background-color: $c-dark;
+        border-color: $c-dark;
+      }
     }
   }
 }
@@ -213,18 +276,42 @@
 
   &:hover {
     color: $c-purple;
+
+    body.blue & {
+      color: $c-light-blue;
+    }
+
+    body.light-blue & {
+      color: $c-blue;
+    }
+
+    body.purple & {
+      color: $c-dark;
+    }
   }
 
   &:focus {
     color: $c-purple;
     background-color: $c-light;
-    border-color: $c-purple;
+    border-color: currentColor;
     outline: none;
+
+    body.blue & {
+      color: $c-light-blue;
+    }
+
+    body.light-blue & {
+      color: $c-blue;
+    }
+
+    body.purple & {
+      color: $c-dark;
+    }
   }
 
   &:active,
   &:active:focus {
-    color: $c-purple;
+    color: $c-light;
     background-color: $c-light;
     border-color: $c-light;
   }
