style: добавлены стили ui для кнопок слайдера

--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -172,6 +172,18 @@
   transition: opacity var(--duration) var(--timing-function);
   will-change: opacity;
 
+  body.blue & {
+    color: $c-light-blue;
+  }
+
+  body.light-blue & {
+    color: $c-blue;
+  }
+
+  body.purple & {
+    color: $c-dark;
+  }
+
   @media (min-width: $stop-scaling) {
     width: 40px;
     height: 40px;
@@ -236,8 +248,20 @@
     color: $c-purple;
     outline: none;
 
+    body.blue & {
+      color: $c-light-blue;
+    }
+
+    body.light-blue & {
+      color: $c-blue;
+    }
+
+    body.purple & {
+      color: $c-dark;
+    }
+
     &::before {
-      border-color: $c-purple;
+      border-color: currentColor;
     }
   }
 
@@ -245,11 +269,46 @@
   &:active:focus {
     color: $c-light;
 
+    body.blue & {
+      color: $c-light;
+    }
+
+    body.light-blue & {
+      color: $c-light;
+    }
+
+    body.purple & {
+      color: $c-light;
+    }
+
     &::before {
       width: 100%;
       height: 100%;
       background-color: $c-purple;
       border-color: $c-purple;
+
+      body.blue & {
+        background-color: $c-light-blue;
+        border-color: $c-light-blue;
+      }
+
+      body.light-blue & {
+        background-color: $c-blue;
+        border-color: $c-blue;
+      }
+
+      body.purple & {
+        background-color: $c-dark;
+        border-color: $c-dark;
+      }
+
+      body.light-blue & {
+        color: $c-blue;
+      }
+
+      body.purple & {
+        color: $c-dark;
+      }
     }
   }
 }
