--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -42,6 +42,14 @@
   img {
     display: block;
     position: absolute;
+
+    &.image__full-screen {
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+    }
   }
 
   .image_flamingo {
