--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -23,3 +23,4 @@
 @import "blocks/social-block.scss";
 @import "blocks/transition.scss";
 @import "blocks/accent-text.scss";
+@import "blocks/svg.scss";
