--- a/source/scss/blocks/game.scss
+++ b/source/scss/blocks/game.scss
@@ -78,6 +78,8 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: 0;
+  width: 11rem;
+  text-align: left;
 
   @media (min-width: $stop-scaling) {
     font-size: 48px;
@@ -90,6 +92,7 @@
   @media (max-width: $tablet) and (orientation: portrait) {
     margin-bottom: 1.8rem;
     font-size: 3.6rem;
+    width: 7rem;
   }
 
   @media (max-width: $tablet) and (orientation: landscape) {
