--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   z-index: -1;
+  margin: 0 auto;
 
   @media (orientation: portrait) {
     left: -1rem;
