--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -284,9 +284,9 @@
 }
 
 .screen--story {
-  background-color: $c-dark;
-  background-image: url("../img/slide1.jpg"), url("../img/slide2.jpg"),
-    url("../img/slide3.jpg"), url("../img/slide4.jpg");
+  //background-color: $c-dark;
+  //background-image: url("../img/slide1.jpg"), url("../img/slide2.jpg"),
+  //  url("../img/slide3.jpg"), url("../img/slide4.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -295,6 +295,13 @@
     background-size: auto calc(100vh - 13.8rem), 100% 25rem;
     background-position: top center, bottom center;
   }
+}
+
+#canvas--screen--story {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .screen--prizes {
