--- a/source/scss/blocks/animation-screen.scss
+++ b/source/scss/blocks/animation-screen.scss
@@ -10,6 +10,10 @@
   background-size: 100% auto;
   background-position: center;
 
+  // todo: фон временно добавлен для работы с 3D моделями на главном экране
+  background-color: #1c1c1f;
+  z-index: 999;
+
   @include retina {
     //background-image: url("../img/scene@2x.png");
   }
