добавил создатель материалов + GUI, подключил материалыв

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -24,3 +24,8 @@
 @import "blocks/transition.scss";
 @import "blocks/accent-text.scss";
 @import "blocks/svg.scss";
+
+/* TODO: убрать потом, нужно для корректного отображения GUI */
+.dg.ac {
+  z-index: 1000 !important;
+}
