добавил лоадер в процессе загрузки ресурсов

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/transition.scss";
 @import "blocks/accent-text.scss";
 @import "blocks/svg.scss";
+@import "blocks/dice-loader.scss";
 
 /* TODO: убрать потом, нужно для корректного отображения GUI */
 .dg.ac {
