--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -307,32 +307,6 @@
 .screen--game {
   position: relative;
   background-color: $c-dark;
-
-  &::before {
-    content: "";
-    position: absolute;
-    right: -8.5rem;
-    bottom: 0;
-    width: 32.7rem;
-    height: 36.9rem;
-    background-image: url("../img/sonya.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    @include retina {
-      background-image: url("../img/sonya@2x.png");
-    }
-
-    @media (min-width: $stop-scaling) {
-      right: -85px;
-      width: 327px;
-      height: 369px;
-    }
-
-    @media (max-width: $tablet) and (orientation: portrait) {
-      opacity: 0;
-    }
-  }
 }
 
 .screen--result {
@@ -352,4 +326,22 @@
 
 .screen--rules {
   background-color: $c-dark;
+}
+
+.screen--game--sonya {
+  position: absolute;
+  right: -8.5rem;
+  bottom: 0;
+  width: 32.7rem;
+  height: 36.9rem;
+
+  @media (min-width: $stop-scaling) {
+    right: -85px;
+    width: 327px;
+    height: 369px;
+  }
+
+  @media (max-width: $tablet) and (orientation: portrait) {
+    display: none;
+  }
 }
