--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -335,6 +335,8 @@
   width: 32.7rem;
   height: 36.9rem;
 
+  transform: translate(400px, 300px) rotateZ(-22deg) scale(0.3);
+
   @media (min-width: $stop-scaling) {
     right: -85px;
     width: 327px;
