добавил переходы между экранами согласно ТЗ

--- a/source/scss/blocks/transition.scss
+++ b/source/scss/blocks/transition.scss
@@ -1,6 +1,5 @@
 .transition {
   position: fixed;
-  z-index: 5;
   top: 0;
   left: 0;
   overflow: hidden;
@@ -20,6 +19,12 @@
     transform: translateY(-100%);
 
     &__show {
+      transform: translateY(0);
+    }
+
+    html.is-transitioning &__show {
+      z-index: 5;
+
       animation: slideInUpBig .4s ease-in forwards;
     }
   }
