--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -10,6 +10,10 @@
     display: none;
   }
 
+  &.screen--fadeOut .screen__wrapper {
+    animation: fadeOut 0.4s ease-out, zoomOut 1.5s ease-out;
+  }
+
   @media (max-width: $tablet) and (orientation: portrait) {
     min-height: calc(var(--vh, 1vh) * 100);
   }
