--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -2,8 +2,12 @@
   from {
     opacity: 0;
   }
+}
 
-
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes fadeInRight {
@@ -57,6 +61,12 @@
 
   to {
     transform: scale(1);
+  }
+}
+
+@keyframes zoomOut {
+  to {
+    transform: scale(0);
   }
 }
 
