поправил анимацию переходов

--- a/source/scss/blocks/transition.scss
+++ b/source/scss/blocks/transition.scss
@@ -6,6 +6,7 @@
   width: 100vw;
   height: 100vh;
   pointer-events: none;
+  z-index: 5;
 
   &--background {
     position: absolute;
@@ -16,16 +17,14 @@
     width: 100%;
     height: 100%;
     background-color: $c-dark;
-    transform: translateY(-100%);
+    transform: translateY(100%);
 
     &__show {
       transform: translateY(0);
     }
 
     html.is-transitioning &__show {
-      z-index: 5;
-
-      animation: slideInUpBig .4s ease-in forwards;
+      animation: slideInUpBig .4s ease-in;
     }
   }
 }
