--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -248,3 +248,13 @@
     color: $c-dark;
   }
 }
+
+@keyframes textAppearFromBottom {
+  from {
+    transform: translateY(1.5em);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
