--- a/source/scss/blocks/chat.scss
+++ b/source/scss/blocks/chat.scss
@@ -161,6 +161,18 @@
     background-color: $c-light;
     border-radius: 50%;
 
+    animation-name: fadeOutHalf;
+    animation-duration: 0.45s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+
+    @for $i from 1 to 4 {
+      &:nth-child(#{$i}) {
+        animation-delay: calc((#{$i} - 1) * 0.15s);
+      }
+    }
+
     @media (min-width: $stop-scaling) {
       margin: 0 6.5px;
     }
