--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -258,3 +258,13 @@
     transform: translateY(0);
   }
 }
+
+@keyframes fadeOutHalf {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0.3;
+  }
+}
